compiler/tests/success/otbn/intrinsic_sub.jazz
export
fn sub(reg u32 arg0 arg1) {
    reg u32 x;
    x = #SUB(arg0, arg1);
    [x] = x;
}
