compiler/tests/fail/arm-m4/intrinsic_ldrhS.jazz
export
fn ldrh(reg u32 arg) -> reg u32 {
    reg u32 x;
    ?{}, x = #LDRHS((u16)[arg]);
    return x;
}
